# goit-web-hw-deploy

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
lection_code/: unitest.py
migrations/: env.py
migrations/versions/: 1c065505e06e_init.py  2195ac52216a_add_table_users.py  a1799e7a83f6_init.py  e825ae7354f5_init.py  f34ab1dd9ffd_adding_virified.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  user.py
src/services/: auth.py  email.py  test.py
src/templates/: index.html
tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py  test_unit_repository_contacts.py
